Updates from Overleaf

--- a/preamble.tex
+++ b/preamble.tex
@@ -24,3 +24,9 @@
 \newcommand{\longblank}{\underline{\hspace{2cm}}}
 
 \DeclareMathOperator{\Var}{Var}
+\let\Re\relax
+\DeclareMathOperator{\Re}{Re}
+\let\Im\relax
+\DeclareMathOperator{\Im}{Im}
+\DeclareMathOperator{\Res}{Res}
+\DeclareMathOperator{\ord}{ord}
