--- a/pset4/pset4.tex
+++ b/pset4/pset4.tex
@@ -2,8 +2,10 @@
 \input{../preamble}
 
 \title{MATH4460 Spring 2023\\
-Problem Set 1 Solutions}
+Problem Set 4}
+
+\excludeversion{solution}
 
 \begin{document}
-  \input{pset1-content}
+  \input{pset4-content}
 \end{document}
