--- a/syllabus.tex
+++ b/syllabus.tex
@@ -41,7 +41,12 @@ Typesetting your homework using LaTeX is strongly encouraged, but not required.
 \subsection*{Exams and grading}
 There will be two in-class exams (50 minutes each) and a final (120 minutes). Final grades will be determined by a weighted average of homework and exam scores.  Homework counts for 20\%, each in-class exam counts for 20\%, and the final counts for 40\%.
 
-All exams will be given in class.
+All exams will be given in class. Exam dates and times are as follows:
+\begin{itemize}
+  \item Exam 1: March 1, 2023, 3:00 pm, in class.
+  \item Exam 2: April 19, 2023, 3:00 pm, in class.
+  \item Final exam: To be determined.
+\end{itemize}
 
 \subsection*{Academic integrity}
 Cheating of any kind will result in a failing grade for the course and referral to the Dean’s office for disciplinary action.  For more information on academic integrity see \url{https://www.bc.edu/integrity}.
